- Add first input on Create.jsx. - Change styles - Need to fix hr elem (not visible on page)

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,11 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
-.App {
-  background-color: #8d4a4a;
-}
+// .App {
+//   background-color: #8d4a4a;
+// }
 
 .logo {
   height: 6em;
