--- a/src/components/input/Input.module.scss
+++ b/src/components/input/Input.module.scss
@@ -1,5 +1,7 @@
 .inputContainer {
 	margin-bottom: 15px;
+	width: 100%;
+	max-width: 320px;
 }
 
 .label {
