--- a/src/index.scss
+++ b/src/index.scss
@@ -25,8 +25,6 @@ body {
   color: $fontColor;
   background-color: $bodyBackground;
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 
@@ -49,6 +47,12 @@ a {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.hr {
+  height: 1px;
+  color: $buttonColor;
+  overflow: visible;
 }
 
 button {
